--- a/Index.html
+++ b/Index.html
@@ -16,14 +16,14 @@
 <h1 align="Center">Blog de Café con consejos y Cursos</h1>
 <h3 align="center">Aprende de los expertos con las mejores recetas y consejos</h3>
 <!--Menú de Navegación-->
-<nav>
+<NAV>
     <ul>
-        <li id="#Incio"><a href="Inicio">Inicio</a></li>
-        <li id="#Nosotros"><a href="Nosotros">Nosotros</a></li>
-        <li id="#Cursos"><a href="Cursos">Cursos</a></li>
-        <li id="#Contacto"><a href="/Contacto.html" target="_blank">Contacto</a></li>
+        <li><a href="#Inico">Inicio</a></li>
+        <li><a href="#Nosostros">Nosostros</a></li>
+        <li><a href="#Cursos">Cursos</a></li>
+        <li><a href="Contacto.html" target="_blank">Contacto</a></li>
     </ul>
-</nav>
+</NAV>
 <img src="Img/banner.jpg" alt="Banner de Fondo para el header">
 </header><br><br>
 <!--Parte principal de la pagina-->
@@ -79,14 +79,14 @@ semper ante eu, pulvinar neque.</p><br>
     <img src="Img/Logo.png" alt="LogoTipo">
     <p align="center">Elaboración de hojas de Estilos- GACC &COPY;</p>
     <!--Menú de Navegación-->
-    <nav>
+    <NAV>
         <ul>
-            <li id="#Incio"><a href="Inicio">Inicio</a></li>
-        <li id="#Nosotros"><a href="Nosotros">Nosotros</a></li>
-        <li id="#Cursos"><a href="Cursos">Cursos</a></li>
-        <li id="#Contacto"><a href="/Contacto.html" target="_blank">Contacto</a></li>
+            <li><a href="#Inico">Inicio</a></li>
+            <li><a href="#Nosostros">Nosostros</a></li>
+            <li><a href="#Cursos">Cursos</a></li>
+            <li><a href="Contacto.html" target="_blank">Contacto</a></li>
         </ul>
-    </nav>
+    </NAV>
 </footer> 
 </body>
 </html>
